compilers/labs/lab3/code/src/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier FunDec SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec error ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ε
   17       | ID

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: ε
   30         | Stmt StmtList

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | Exp error

   38 DefList: ε
   39        | Def DefList

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI
   42    | Specifier DecList error

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | Exp LB error RB
   66    | Exp ASSIGNOP error
   67    | LP error RP
   68    | ID LP error RP
   69    | Exp LB Exp error RB

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 11 21 24 37 41 42 65 66 67 68 69
    STRUCT (258) 14 15
    RETURN (259) 33
    IF (260) 34 35
    ELSE (261) 35
    WHILE (262) 36
    SEMI (263) 4 5 8 31 33 40 41
    COMMA (264) 10 25 44 70
    ASSIGNOP (265) 46 47 66
    PLUS (266) 51
    MINUS (267) 52 56
    STAR (268) 53
    DIV (269) 54
    AND (270) 48
    OR (271) 49
    NOT (272) 57
    LP (273) 22 23 24 34 35 36 55 58 59 67 68
    RP (274) 22 23 24 34 35 36 55 58 59 67 68
    LB (275) 20 21 60 65 69
    RB (276) 20 21 60 65 69
    LC (277) 14 28
    RC (278) 14 28
    TYPE (279) 12
    INT (280) 20 63
    FLOAT (281) 64
    ID (282) 17 18 19 22 23 24 58 59 61 62 68
    RELOP (283) 50
    DOT (284) 61
    LOWER_THAN_NOT (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 3
    ExtDef (35)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList (36)
        on left: 9 10 11
        on right: 4 10 11
    Specifier (37)
        on left: 12 13
        on right: 4 5 6 7 8 27 40 41 42
    StructSpecifier (38)
        on left: 14 15
        on right: 13
    OptTag (39)
        on left: 16 17
        on right: 14
    Tag (40)
        on left: 18
        on right: 15
    VarDec (41)
        on left: 19 20 21
        on right: 9 10 11 20 21 27 45 46
    FunDec (42)
        on left: 22 23 24
        on right: 6 8
    VarList (43)
        on left: 25 26
        on right: 22 25
    ParamDec (44)
        on left: 27
        on right: 25 26
    CompSt (45)
        on left: 28
        on right: 6 32
    StmtList (46)
        on left: 29 30
        on right: 28 30
    Stmt (47)
        on left: 31 32 33 34 35 36 37
        on right: 30 34 35 36
    DefList (48)
        on left: 38 39
        on right: 14 28 39
    Def (49)
        on left: 40 41 42
        on right: 39
    DecList (50)
        on left: 43 44
        on right: 40 42 44
    Dec (51)
        on left: 45 46
        on right: 43 44
    Exp (52)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 31 33 34 35 36 37 46 47 48 49 50 51 52 53 54 55 56 57 60 61 65 66 69 70 71
    Args (53)
        on left: 70 71
        on right: 58 70


State 0

    0 $accept: • Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   14 StructSpecifier: STRUCT • OptTag LC DefList RC
   15                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

   12 Specifier: TYPE •

    $default  reduce using rule 12 (Specifier)


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef • ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error
    8       | Specifier • FunDec SEMI

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   13 Specifier: StructSpecifier •

    $default  reduce using rule 13 (Specifier)


State 8

   17 OptTag: ID •
   18 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   14 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 19


State 10

   15 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 13

    7 ExtDef: Specifier error •

    $default  reduce using rule 7 (ExtDef)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

   19 VarDec: ID •
   22 FunDec: ID • LP VarList RP
   23       | ID • LP RP
   24       | ID • LP error RP

    LP  shift, and go to state 20

    $default  reduce using rule 19 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 21


State 17

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   11           | VarDec • error ExtDecList
   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error RB

    error  shift, and go to state 22
    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    SEMI  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec • CompSt
    8       | Specifier FunDec • SEMI

    SEMI  shift, and go to state 25
    LC    shift, and go to state 26

    CompSt  go to state 27


State 19

   14 StructSpecifier: STRUCT OptTag LC • DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

   22 FunDec: ID LP • VarList RP
   23       | ID LP • RP
   24       | ID LP • error RP

    error   shift, and go to state 31
    STRUCT  shift, and go to state 1
    RP      shift, and go to state 32
    TYPE    shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 21

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 22

   11 ExtDecList: VarDec error • ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 17


State 23

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 38
    VarDec      go to state 17


State 24

   20 VarDec: VarDec LB • INT RB
   21       | VarDec LB • error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 25

    8 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 8 (ExtDef)


State 26

   28 CompSt: LC • DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 28

   40 Def: Specifier • DecList SEMI
   41    | Specifier • error SEMI
   42    | Specifier • DecList error

    error  shift, and go to state 42
    ID     shift, and go to state 36

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 29

   14 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 46


State 30

   39 DefList: Def • DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 47
    Def              go to state 30


State 31

   24 FunDec: ID LP error • RP

    RP  shift, and go to state 48


State 32

   23 FunDec: ID LP RP •

    $default  reduce using rule 23 (FunDec)


State 33

   27 ParamDec: Specifier • VarDec

    ID  shift, and go to state 36

    VarDec  go to state 49


State 34

   22 FunDec: ID LP VarList • RP

    RP  shift, and go to state 50


State 35

   25 VarList: ParamDec • COMMA VarList
   26        | ParamDec •

    COMMA  shift, and go to state 51

    $default  reduce using rule 26 (VarList)


State 36

   19 VarDec: ID •

    $default  reduce using rule 19 (VarDec)


State 37

   11 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 39

   21 VarDec: VarDec LB error • RB

    RB  shift, and go to state 52


State 40

   20 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 53


State 41

   28 CompSt: LC DefList • StmtList RC

    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 26
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 42

   41 Def: Specifier error • SEMI

    SEMI  shift, and go to state 67


State 43

   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error RB
   45 Dec: VarDec •
   46    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 24

    $default  reduce using rule 45 (Dec)


State 44

   40 Def: Specifier DecList • SEMI
   42    | Specifier DecList • error

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 45

   43 DecList: Dec •
   44        | Dec • COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 43 (DecList)


State 46

   14 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 14 (StructSpecifier)


State 47

   39 DefList: Def DefList •

    $default  reduce using rule 39 (DefList)


State 48

   24 FunDec: ID LP error RP •

    $default  reduce using rule 24 (FunDec)


State 49

   20 VarDec: VarDec • LB INT RB
   21       | VarDec • LB error RB
   27 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 27 (ParamDec)


State 50

   22 FunDec: ID LP VarList RP •

    $default  reduce using rule 22 (FunDec)


State 51

   25 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 35


State 52

   21 VarDec: VarDec LB error RB •

    $default  reduce using rule 21 (VarDec)


State 53

   20 VarDec: VarDec LB INT RB •

    $default  reduce using rule 20 (VarDec)


State 54

   33 Stmt: RETURN • Exp SEMI

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 73


State 55

   34 Stmt: IF • LP Exp RP Stmt
   35     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 74


State 56

   36 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 75


State 57

   56 Exp: MINUS • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 76


State 58

   57 Exp: NOT • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 77


State 59

   55 Exp: LP • Exp RP
   67    | LP • error RP

    error  shift, and go to state 78
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 79


State 60

   63 Exp: INT •

    $default  reduce using rule 63 (Exp)


State 61

   64 Exp: FLOAT •

    $default  reduce using rule 64 (Exp)


State 62

   58 Exp: ID • LP Args RP
   59    | ID • LP RP
   62    | ID •
   68    | ID • LP error RP

    LP  shift, and go to state 80

    $default  reduce using rule 62 (Exp)


State 63

   32 Stmt: CompSt •

    $default  reduce using rule 32 (Stmt)


State 64

   28 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 81


State 65

   30 StmtList: Stmt • StmtList

    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 26
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 82
    Stmt      go to state 65
    Exp       go to state 66


State 66

   31 Stmt: Exp • SEMI
   37     | Exp • error
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    error     shift, and go to state 83
    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 67

   41 Def: Specifier error SEMI •

    $default  reduce using rule 41 (Def)


State 68

   46 Dec: VarDec ASSIGNOP • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 95


State 69

   42 Def: Specifier DecList error •

    $default  reduce using rule 42 (Def)


State 70

   40 Def: Specifier DecList SEMI •

    $default  reduce using rule 40 (Def)


State 71

   44 DecList: Dec COMMA • DecList

    ID  shift, and go to state 36

    VarDec   go to state 43
    DecList  go to state 96
    Dec      go to state 45


State 72

   25 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 25 (VarList)


State 73

   33 Stmt: RETURN Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 74

   34 Stmt: IF LP • Exp RP Stmt
   35     | IF LP • Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 98


State 75

   36 Stmt: WHILE LP • Exp RP Stmt

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 99


State 76

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   56    | MINUS Exp •
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    LB   shift, and go to state 92
    DOT  shift, and go to state 94

    $default  reduce using rule 56 (Exp)


State 77

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   57    | NOT Exp •
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    LB   shift, and go to state 92
    DOT  shift, and go to state 94

    $default  reduce using rule 57 (Exp)


State 78

   67 Exp: LP error • RP

    RP  shift, and go to state 100


State 79

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   55    | LP Exp • RP
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    RP        shift, and go to state 101
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 80

   58 Exp: ID LP • Args RP
   59    | ID LP • RP
   68    | ID LP • error RP

    error  shift, and go to state 102
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 103
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp   go to state 104
    Args  go to state 105


State 81

   28 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 28 (CompSt)


State 82

   30 StmtList: Stmt StmtList •

    $default  reduce using rule 30 (StmtList)


State 83

   37 Stmt: Exp error •

    $default  reduce using rule 37 (Stmt)


State 84

   31 Stmt: Exp SEMI •

    $default  reduce using rule 31 (Stmt)


State 85

   47 Exp: Exp ASSIGNOP • Exp
   66    | Exp ASSIGNOP • error

    error  shift, and go to state 106
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 107


State 86

   51 Exp: Exp PLUS • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 108


State 87

   52 Exp: Exp MINUS • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 109


State 88

   53 Exp: Exp STAR • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 110


State 89

   54 Exp: Exp DIV • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 111


State 90

   48 Exp: Exp AND • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 112


State 91

   49 Exp: Exp OR • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 113


State 92

   60 Exp: Exp LB • Exp RB
   65    | Exp LB • error RB
   69    | Exp LB • Exp error RB

    error  shift, and go to state 114
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 115


State 93

   50 Exp: Exp RELOP • Exp

    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 116


State 94

   61 Exp: Exp DOT • ID

    ID  shift, and go to state 117


State 95

   46 Dec: VarDec ASSIGNOP Exp •
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94

    $default  reduce using rule 46 (Dec)


State 96

   44 DecList: Dec COMMA DecList •

    $default  reduce using rule 44 (DecList)


State 97

   33 Stmt: RETURN Exp SEMI •

    $default  reduce using rule 33 (Stmt)


State 98

   34 Stmt: IF LP Exp • RP Stmt
   35     | IF LP Exp • RP Stmt ELSE Stmt
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    RP        shift, and go to state 118
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 99

   36 Stmt: WHILE LP Exp • RP Stmt
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    RP        shift, and go to state 119
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94


State 100

   67 Exp: LP error RP •

    $default  reduce using rule 67 (Exp)


State 101

   55 Exp: LP Exp RP •

    $default  reduce using rule 55 (Exp)


State 102

   68 Exp: ID LP error • RP

    RP  shift, and go to state 120


State 103

   59 Exp: ID LP RP •

    $default  reduce using rule 59 (Exp)


State 104

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB
   70 Args: Exp • COMMA Args
   71     | Exp •

    COMMA     shift, and go to state 121
    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94

    $default  reduce using rule 71 (Args)


State 105

   58 Exp: ID LP Args • RP

    RP  shift, and go to state 122


State 106

   66 Exp: Exp ASSIGNOP error •

    $default  reduce using rule 66 (Exp)


State 107

   47 Exp: Exp • ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp •
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    LB        shift, and go to state 92
    RELOP     shift, and go to state 93
    DOT       shift, and go to state 94

    $default  reduce using rule 47 (Exp)


State 108

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   51    | Exp PLUS Exp •
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    LB    shift, and go to state 92
    DOT   shift, and go to state 94

    $default  reduce using rule 51 (Exp)


State 109

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   52    | Exp MINUS Exp •
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    LB    shift, and go to state 92
    DOT   shift, and go to state 94

    $default  reduce using rule 52 (Exp)


State 110

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   53    | Exp STAR Exp •
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID
   65    | Exp • LB error RB
   66    | Exp • ASSIGNOP error
   69    | Exp • LB Exp error RB

    LB   shift, and go to state 92
    DOT  shift, and go to state 94

    $default  reduce using rule 53 (Exp)


State 111
